--- a/lab.conf
+++ b/lab.conf
@@ -3,7 +3,7 @@ LAB_DESCRIPTION="SIRS project"
 # images 
 
 fileserver[image]="xtrm0/quagga"
-ids1[image]="xtrm0/quagga"
+ids1[image]="kathara/quagga-snort"
 mailserver[image]="xtrm0/quagga"
 packetfilter[image]="xtrm0/quagga"
 pc1[image]="xtrm0/quagga"
