Fixed some parts of `VPN`.

--- a/router1/root/server.conf
+++ b/router1/root/server.conf
@@ -138,7 +138,7 @@ ifconfig-pool-persist /var/log/openvpn/ipp.txt
 # to know to route the OpenVPN client
 # address pool (10.8.0.0/255.255.255.0)
 # back to the OpenVPN server.
-;push "route 192.168.10.0 255.255.255.0"
+push "route 5.4.3.0 255.255.255.0"
 ;push "route 192.168.20.0 255.255.255.0"
 
 # To assign specific IP addresses to specific
@@ -152,8 +152,9 @@ ifconfig-pool-persist /var/log/openvpn/ipp.txt
 # also has a small subnet behind his connecting
 # machine, such as 192.168.40.128/255.255.255.248.
 # First, uncomment out these lines:
-;client-config-dir ccd
-;route 192.168.40.128 255.255.255.248
+client-config-dir ccd
+ccd-exclusive
+route 5.4.3.0 0.0.0.255
 # Then create a file ccd/Thelonious with this line:
 #   iroute 192.168.40.128 255.255.255.248
 # This will allow Thelonious' private subnet to
@@ -189,7 +190,7 @@ ifconfig-pool-persist /var/log/openvpn/ipp.txt
 # (The OpenVPN server machine may need to NAT
 # or bridge the TUN/TAP interface to the internet
 # in order for this to work properly).
-;push "redirect-gateway def1 bypass-dhcp"
+push "redirect-gateway def1"
 
 # Certain Windows-specific network settings
 # can be pushed to clients, such as DNS
@@ -206,7 +207,7 @@ ifconfig-pool-persist /var/log/openvpn/ipp.txt
 # To force clients to only see the server, you
 # will also need to appropriately firewall the
 # server's TUN/TAP interface.
-;client-to-client
+client-to-client
 
 # Uncomment this directive if multiple clients
 # might connect with the same certificate/key
@@ -260,7 +261,7 @@ cipher AES-256-CBC
 # For compression compatible with older clients use comp-lzo
 # If you enable it here, you must also
 # enable it in the client config file.
-;comp-lzo
+comp-lzo
 
 # The maximum number of concurrently connected
 # clients we want to allow.
