Fixed openvpn + firewall.

--- a/router1/root/server.conf
+++ b/router1/root/server.conf
@@ -105,7 +105,7 @@ server 1.2.1.0 255.255.255.0
 # is restarted, reconnecting clients can be assigned
 # the same virtual IP address from the pool that was
 # previously assigned.
-ifconfig-pool-persist /var/log/openvpn/ipp.txt
+ifconfig-pool-persist ipp.txt
 
 # Configure server mode for ethernet bridging.
 # You must first use your OS's bridging capability
@@ -138,8 +138,8 @@ ifconfig-pool-persist /var/log/openvpn/ipp.txt
 # to know to route the OpenVPN client
 # address pool (10.8.0.0/255.255.255.0)
 # back to the OpenVPN server.
+push "route 1.2.0.0 255.255.240.0"
 push "route 5.4.3.0 255.255.255.0"
-;push "route 192.168.20.0 255.255.255.0"
 
 # To assign specific IP addresses to specific
 # clients or if a connecting client has a private
@@ -154,7 +154,7 @@ push "route 5.4.3.0 255.255.255.0"
 # First, uncomment out these lines:
 client-config-dir ccd
 ccd-exclusive
-route 5.4.3.0 0.0.0.255
+route 5.4.3.0 255.255.255.0
 # Then create a file ccd/Thelonious with this line:
 #   iroute 192.168.40.128 255.255.255.248
 # This will allow Thelonious' private subnet to
